--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -10,8 +10,8 @@
   "ARTIST": "Исполнители",
   "ARTIST_SINGLE": "Исполнитель",
   "ASCENDING": "По возрастанию",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Автоматически добавлять другие треки из коллекции для воспроизведения, после завершения альбома.",
+  "AUTO_REFRESH_SETTING": "Автоматически проверять наличие новых файлов при каждом запуске",
   "A_TO_Z": "По алфавиту",
   "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
@@ -46,17 +46,17 @@
   "DELETE_TRACK": "Удалить трек",
   "DESCENDING": "По убыванию",
   "DISCORD": "DISCORD",
-  "DISCOVERING_FILES": "Discovering files...",
+  "DISCOVERING_FILES": "Поиск файлов...",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
-  "EXIT_NOW_PLAYING": "Exit now playing",
+  "EXIT_NOW_PLAYING": "Выйти из плеера",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
-  "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL": "Экспериментальные",
+  "EXPERIMENTAL_SUBTITLE": "Эти настройки пока, что нестабильны.",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Работа, связанная с индексацией, уже выполняется. Пожалуйста, подождите.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
@@ -66,13 +66,13 @@
   "LYRICS_NOT_FOUND": "Текст не найден.",
   "LYRICS_RETRIEVING": "Получение...",
   "MENU": "Меню",
-  "MUTE": "Mute",
+  "MUTE": "Отключить звук",
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
-  "NEXT": "ДАЛЬШЕ",
+  "NEXT": "ДАЛЕЕ",
   "NO": "НЕТ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Показывать тексты песен в уведомлении.",
   "NOTIFICATION_LYRICS_TITLE": "Тексты в уведомлении",
-  "NOW_PLAYING": "Плеер",
+  "NOW_PLAYING": "ПЛЕЕР",
   "NOW_PLAYING_NEXT_TRACK": "ВПЕРЁД",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Ничего не играет.",
   "NOW_PLAYING_PREVIOUS_TRACK": "НАЗАД",
@@ -84,11 +84,11 @@
   "NO_PLAYLISTS_FOUND": "Плейлисты не найдены.\nСоздайте плейлист, чтобы увидеть его здесь.",
   "N_TRACKS": "N треков",
   "OK": "ОК",
-  "OPEN_IN_BROWSER": "Open in browser",
+  "OPEN_IN_BROWSER": "Открыть в браузере",
   "OPTIONS": "Параметры",
   "ORDER": "Order",
-  "PAUSE": "Пауза",
-  "PLAY": "Плей",
+  "PAUSE": "ПАУЗА",
+  "PLAY": "ПЛЕЙ",
   "PLAYLIST": "Плейлисты",
   "PLAYLISTS_CREATE": "Создать плейлист",
   "PLAYLISTS_SUBHEADER": "Плейлисты на Вашем устройстве",
@@ -99,13 +99,13 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_NOW": "Проиграть",
-  "PREVIOUS": "Предыдущие",
+  "PREVIOUS": "НАЗАД",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
-  "REINDEX": "Reindex",
-  "REMOVE": "REMOVE",
+  "REINDEX": "Переиндексировать",
+  "REMOVE": "УДАЛИТЬ",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
-  "REPEAT": "Repeat",
+  "REPEAT": "Повтор воспроизведения",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
   "RETRIEVING_LINK": "Получение ссылки",
@@ -150,12 +150,12 @@
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
-  "SHUFFLE": "Shuffle",
-  "SORT": "Sort",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Автоматически перейти на экран \"Сейчас играет\" при воспроизведения трека",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Показать прогресс трека на панеле задачь",
+  "SHUFFLE": "Перемешать",
+  "SORT": "Сортировка",
   "SORT_BY": "Сортировать",
-  "SPEED": "Speed",
+  "SPEED": "Скорость",
   "STARTING_PLAYBACK": "Воспроизведение",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
@@ -165,7 +165,7 @@
   "TRACKS_FROM_ARTIST": "Треки этого исполнителя.",
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "ПЕРЕДАЧИ",
-  "UNMUTE": "Unmute",
+  "UNMUTE": "Включить звук",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Предупреждение",
   "YEAR": "Год",
