--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -10,8 +10,8 @@
   "ARTIST": "Исполнители",
   "ARTIST_SINGLE": "Исполнитель",
   "ASCENDING": "По возрастанию",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Автоматически добавлять другие треки из коллекции для воспроизведения, после завершения альбома.",
-  "AUTO_REFRESH_SETTING": "Автоматически проверять наличие новых файлов при каждом запуске",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Добавлять другие треки из коллекции по окончании плейлиста",
+  "AUTO_REFRESH_SETTING": "Проверять наличие новых файлов при каждом запуске",
   "A_TO_Z": "По алфавиту",
   "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
@@ -50,14 +50,14 @@
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
-  "EXIT_NOW_PLAYING": "Выйти из плеера",
+  "EXIT_NOW_PLAYING": "Закрыть очередь",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
   "EXPERIMENTAL": "Экспериментальные",
-  "EXPERIMENTAL_SUBTITLE": "Эти настройки пока, что нестабильны.",
+  "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Работа, связанная с индексацией, уже выполняется. Пожалуйста, подождите.",
-  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "Подождите",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
@@ -68,11 +68,11 @@
   "MENU": "Меню",
   "MUTE": "Отключить звук",
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
-  "NEXT": "ДАЛЕЕ",
+  "NEXT": "Далее",
   "NO": "НЕТ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Показывать тексты песен в уведомлении.",
   "NOTIFICATION_LYRICS_TITLE": "Тексты в уведомлении",
-  "NOW_PLAYING": "ПЛЕЕР",
+  "NOW_PLAYING": "Очередь",
   "NOW_PLAYING_NEXT_TRACK": "ВПЕРЁД",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Ничего не играет.",
   "NOW_PLAYING_PREVIOUS_TRACK": "НАЗАД",
@@ -86,9 +86,9 @@
   "OK": "ОК",
   "OPEN_IN_BROWSER": "Открыть в браузере",
   "OPTIONS": "Параметры",
-  "ORDER": "Order",
-  "PAUSE": "ПАУЗА",
-  "PLAY": "ПЛЕЙ",
+  "ORDER": "Порядок",
+  "PAUSE": "Пауза",
+  "PLAY": "Плей",
   "PLAYLIST": "Плейлисты",
   "PLAYLISTS_CREATE": "Создать плейлист",
   "PLAYLISTS_SUBHEADER": "Плейлисты на Вашем устройстве",
@@ -96,16 +96,16 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
   "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
-  "PLAYLIST_SINGLE": "Playlist",
+  "PLAYLIST_SINGLE": "Плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_NOW": "Проиграть",
-  "PREVIOUS": "НАЗАД",
+  "PREVIOUS": "Назад",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
   "REINDEX": "Переиндексировать",
   "REMOVE": "УДАЛИТЬ",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
-  "REPEAT": "Повтор воспроизведения",
+  "REPEAT": "Повторять",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
   "RETRIEVING_LINK": "Получение ссылки",
@@ -150,9 +150,9 @@
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Автоматически перейти на экран \"Сейчас играет\" при воспроизведения трека",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Показать прогресс трека на панеле задачь",
-  "SHUFFLE": "Перемешать",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Открывать очередь по окончании плейлиста",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Показывать прогресс на панели задач",
+  "SHUFFLE": "Перемешивать",
   "SORT": "Сортировка",
   "SORT_BY": "Сортировать",
   "SPEED": "Скорость",
@@ -166,7 +166,7 @@
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "ПЕРЕДАЧИ",
   "UNMUTE": "Включить звук",
-  "VIDEO_SINGLE": "Video",
+  "VIDEO_SINGLE": "Видео",
   "WARNING": "Предупреждение",
   "YEAR": "Год",
   "YES": "ДА",
