settings: document difference between "refresh" & "reindex" properly

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Öncəki",
   "RECOMMENDATIONS": "Önərilənlər",
   "REFRESH": "YENİLƏ",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Yenilə",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "SİL",
   "REMOVE_FROM_PLAYLIST": "Oynatma sırasından sil",
   "REPEAT": "Təkrar et",
