--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "قبلی",
   "RECOMMENDATIONS": "پیشنهادات",
   "REFRESH": "بروزرسانی",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "بروزرسانی",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "حذف",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
   "REPEAT": "تکرار",
