--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Précédent",
   "RECOMMENDATIONS": "Recommandations",
   "REFRESH": "Actualiser",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Ré-indexer",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "Supprimer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
   "REPEAT": "Repeat",
