--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "前へ",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "再インデックス",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
