--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Tolo-kevitra",
   "REFRESH": "Havaozina",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Reindex",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "FAFANA",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
