--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Anterior",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Reindexar",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "REMOVER",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repitir",
