--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Предыдущие",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Reindex",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "REMOVE",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Repeat",
