--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Prejšnja",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Reindeksiraj",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "ODSTRANI",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
   "REPEAT": "Repeat",
