--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Föregående",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Omindexera",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "TA BORT",
   "REMOVE_FROM_PLAYLIST": "Ta bort från spellista",
   "REPEAT": "Repeat",
