--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Önceki",
   "RECOMMENDATIONS": "Önerilenler",
   "REFRESH": "YENİLE",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Yenile",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "SİL",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
   "REPEAT": "Tekrar",
