--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "重新检索",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
   "REPEAT": "Repeat",
