--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "Refresh",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Reindex",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "REMOVE",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
