--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -104,7 +104,9 @@
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "अनुशंसित",
   "REFRESH": "रिफ्रेश",
+  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
   "REINDEX": "Reindex",
+  "REINDEX_INFORMATION": "Builds the music library again (slower)",
   "REMOVE": "हटाये",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
