add new strings

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A'dan Z'yə",
   "BUFFERING": "Yüklənir",
   "CANCEL": "Ləğv et",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "Kolleksiya",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "\"NAME\" adlı albom silinsinmi?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Sil",
