--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A تا Z",
   "BUFFERING": "بافرینگ...",
   "CANCEL": "لغو",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "مجموعه",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "آیا می‌خواهید آلبوم \"NAME\" را حذف کنید؟",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "حذف",
