--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A से Z",
   "BUFFERING": "बफर हो रहा है...",
   "CANCEL": "कैंसिल",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "कलेक्शन",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "क्या आप इस एल्बम को डिलीट करना चाहते हैं?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "डिलीट",
