--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A tot Z",
   "BUFFERING": "Bufferen...",
   "CANCEL": "ANNULEER",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "Collectie",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
