--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "Collection",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Delete the album \"NAME\"?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Delete",
