--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "Ábécérend",
   "BUFFERING": "Betöltés...",
   "CANCEL": "MÉGSE",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "Gyűjtemény",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött albumot az eszközödről?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Egészen biztos?",
