--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "コレクション",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "端末に保存されているアルバムを削除しますか？",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "削除しますか？",
