--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A à Z",
   "BUFFERING": "Carregando...",
   "CANCEL": "CANCELAR",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "Coleção",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
