--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -15,6 +15,7 @@
   "A_TO_Z": "A till Ö",
   "BUFFERING": "Buffrar...",
   "CANCEL": "AVBRYT",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
   "COLLECTION": "Samling",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Radera albumet \"NAME\"?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Radera",
