--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -11,7 +11,7 @@
   "ARTIST_SINGLE": "アーティスト",
   "ASCENDING": "昇順",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "アルバムの完了後、コレクションから他の曲を自動的に再生中に追加する",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING": "起動した際に自動的に音楽のインデックスを行う",
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
@@ -46,7 +46,7 @@
   "DELETE_TRACK": "トラックを削除",
   "DESCENDING": "降順",
   "DISCORD": "Discordサーバー",
-  "DISCOVERING_FILES": "Discovering files...",
+  "DISCOVERING_FILES": "ファイルを探しています...",
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
@@ -54,10 +54,10 @@
   "EXIT_SUBTITLE": "アプリを終了しますか？",
   "EXIT_TITLE": "終了",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
   "GO_TO_SETTINGS": "設定に移動する",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
-  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "お待ちください",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
   "KNOW_MORE": "もっと見る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
@@ -84,7 +84,7 @@
   "NO_PLAYLISTS_FOUND": "プレイリストが見つかりません\n新しくプレイリストを作成してください",
   "N_TRACKS": "N トラック",
   "OK": "OK",
-  "OPEN_IN_BROWSER": "Open in browser",
+  "OPEN_IN_BROWSER": "ブラウザで開く",
   "OPTIONS": "オプション",
   "ORDER": "Order",
   "PAUSE": "一時停止",
@@ -154,7 +154,7 @@
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーに音楽の進捗状況を表示する",
   "SHUFFLE": "シャッフル",
   "SORT": "並び替え",
-  "SORT_BY": "Sort By",
+  "SORT_BY": "並び順",
   "SPEED": "再生速度",
   "STARTING_PLAYBACK": "再生開始",
   "SWITCH_THEME": "テーマを変更",
